client/app/center/center.css
.cpanel {
    position: absolute;
    height: 100%;
    left: 220px;
    right: 0;
    min-width: 345px;
}
.cpanel .panel-title-container {
    z-index: 1;
}
.rpanel-show {
    margin-right: 480px;
}
/* start of title */

.panel-title-container {
    position:relative;
    height: 35px;
    line-height: 35px;
    width: 100%;
    font-size: 14px;
    color: #333;
    margin: 0;
    padding-left: 20px;
    background-color: white;
    border-bottom: 1px solid #e1e1e1;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    -webkit-transitionDISABLED: .15s .2s ease-out;
    -moz-transitionDISABLED: .15s .2s ease-out;
    -o-transitionDISABLED: .15s .2s ease-out;
    transitionDISABLED: .15s .2s ease-out;
    -webkit-transitionDISABLED: .15s;
    -moz-transitionDISABLED: .15s;
    -o-transitionDISABLED: .15s;
    transitionDISABLED: .15s;
}
.panel-title-info {
    max-width: 73%;
}
.panel-title-info,
.panel-title-member {
    display: inline-block;
    position: relative;
    vertical-align: top;
    height: inherit;

}

.panel-title-info .star {
    visibility:hidden;
    color:#9e9ea6;
    -moz-opacity:1;
    -khtml-opacity:1;
    -webkit-opacity:1;
    opacity:1;
    -ms-filter:alpha(opacity=100);
    filter:alpha(opacity=100);
    display:block;
    position:absolute;
    top:.8rem;
    left:0px;
    padding:.5rem;
    text-shadow:none;
    font-size:.8rem;
}
.panel-title-info:hover .star {
    visibility:visible;
}
.panel-title-info .star:hover {
    color:#fc0;
}
.panel-title-info .star.starred {
    visibility:visible;
    color:#fc0;
    -moz-opacity:.5;
    -khtml-opacity:.5;
    -webkit-opacity:.5;
    opacity:.5;
    -ms-filter:alpha(opacity=50);
    filter:alpha(opacity=50);
}
.panel-title-info:hover .star.starred{
    visibility:visible;
    -moz-opacity:1;
    -khtml-opacity:1;
    -webkit-opacity:1;
    opacity:1;
    -ms-filter:alpha(opacity=100);
    filter:alpha(opacity=100);
}
.panel-title-info:hover .panel-title-info__name,
.panel-title-info:hover .header-title-info__more {
    color: #1d1d1d;
}
.header-padding-for-prefix {
    /*padding-left: 16px;*/
}
.panel-title-info-name-container {
    color:#555459;
    cursor:pointer;
    display:inline-block;
    height: inherit;
    width: 100%;
}
.prefix {
    color:#9e9ea6;
    padding-right:.1rem;
    font-weight:500;
    -webkit-transitionDISABLED:color .15s ease-out;
    -moz-transitionDISABLED:color .15s ease-out;
    -o-transitionDISABLED:color .15s ease-out;
    transitionDISABLED:color .15s ease-out;
    cursor:pointer;
    margin-right: 3px;
}
.panel-title-info__name {
    width: 100%;
    padding-right: 15px;
    font-weight: 700;
}
.header-title-info__more {
    color:#9e9ea6;
    -webkit-transitionDISABLED:color .15s ease-out;
    -moz-transitionDISABLED:color .15s ease-out;
    -o-transitionDISABLED:color .15s ease-out;
    transitionDISABLED:color .15s ease-out;
    cursor:pointer;
    line-height: inherit;
    position: absolute;
    right: 0;
}
.header-title-info__more:hover {
    /*color: #000;*/
}
.header-title-info__dropdown {
}


.panel-title-member__more {
    position: relative;
    margin-left: 8px;
    font-size: 14px;
    color: #999999;
    cursor: pointer;
}
.panel-title-member__more:hover {
    color: #333;
}
.header-title-member__dropdown {
}



/* end of title */

.cpanel-home {
    position: relative;
    text-align: center;
    top: 30%;
}

.msgs {
    background: #fff;
    position: fixed;
    margin-left: 220px;
    margin-right: 0;
    top: 75px;
    left: 0;
    right: 0;
    bottom: 4rem;
    overflow: auto;
    min-width: 260px;
}
.msgs__loading {
    background-size: 40px 40px !important;
    width: 100% !important;
    height: 60px !important;
}
.msgs__loading.initial {
    background-color: #fff;
    background-size: 100px 100px !important;
    height: 100% !important;
    z-index: 1;
}
.msgs-intro {
    padding: 1rem 1rem 1rem 1.5rem;
    margin: 1rem 0 0;
}
.msgs-holder {
    padding: 0 10px 0 20px;
}
.msgs-group {

}
.msgs-group__divider {
    background-color: #ededed;
    border-radius: 3px;
    font-size: 12px;
    color: #666;
    display: table;
    padding: 5px 6px;
    margin: 12px 0 15px 47px;
}
.msgs-group__divider-label {
    display: inline-block;
    padding-top: 4px;
    border-top: 3px solid #31c08a;
}
.msg-item {
    position: relative;
    padding: 0 20px 0 47px;
    margin-bottom: 15px;
}
.msgs-group > .msg-item:last-child {
    margin-bottom: 0;
}
.msg-item.comment-title,
.msg-item.comment-continue{
    margin-bottom: 8px;
}


.msg-item.text {
    margin-top: 13px;
}
.msg-item.file-upload {
    margin: 13px 0 15px;
}
.msg-item.comment_first,
.msg-item.comment_continue {
    margin-bottom: 8px;
}
.msg-item__action {
    display: none;
}
.msg-item:hover .msg-item__action {
    display: block;
}
.msg-item-float {
    position: absolute;
    top: 0;
    left: 0;
}
.msg-item-header {
    padding: 2px 0 10px;
    font-size: 15px;
    font-weight: 700;
    line-height: 1.3rem;
}
.msg-item.comment-continue .msg-item-header {
    padding: 0;
}
/* continued comment writer name */

.msg-comment .msg-comment-body .msg-item-header__name,
.msg-item.comment-continue .msg-item-header .msg-item-header__name {
    font-size: 13px;
    display: inline-block;
    vertical-align: top;
}

.msg-item-header__name {
    color: #333;
    font-weight: 700;
    font-size: 15px;
}
.continue-comment-body {
    font-size: 13px;
    font-weight: 400;
    display: inline-block;
    max-width: 100%;
}
.continue-comment-body p {
    margin: 0;
}
.msg-item-header__created {
    font-size: 10px;
    line-height: 10px;
    color: #666666;
    font-weight: 400;
    margin-left: 3px;
}
/* continued comment created time   */
.msg-item.comment-continue .msg-item-header .msg-item-header__created {
    padding-left: 5px;
}
.msg-item-body {
    position: relative;
}
.msg-item.comment-continue .msg-item-body {
    /*padding-left: 75px;*/
}
.msg-item-body p {
    margin: 0;
    font-size: 16px;
    line-height: 24px;
    color: #333333;
}
.msg-file { min-height: 65px; }
.msg-file-header {
    font-size: 16px;
    font-weight: 700;
}
.msg-file-body-float {
    margin-right: 10px;
    position: relative;

}
/* opac layer over image thumbnail  */
.msg-comment .msg-file-body-float::before {
    content: "";
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    background-color: black;
    opacity: 0.4;
}
.msg-file-body-float .fa-comment {
    position: absolute;
    bottom: 11px;
    right: 11px;
    width: 15px;
    color: white;
    opacity: 0.8;
    z-index: 1;
    -ms-transform: scaleX(-1); /* IE 9 */
    -webkit-transform: scaleX(-1); /* Chrome, Safari, Opera */
    transform: scaleX(-1);
}
.large-thumbnail-parent.msg-file-body-float::before {
    display: none;
}
.msg-file-body-float > img {
    max-width: 100%;
}
.msg-file-body__img {
    height: 65px;
    max-width: 65px;
}
.msg-file-body__thumbnail {
    height: 65px;
    width: 65px;
    background-color: #f2f2f2;
    padding: 15px;
}

.large-thumbnail-parent {
    width: auto;
    height: auto;
    max-width: 700px;
    position: relative;
}
.large-thumbnail {
    margin-bottom: 10px;
    border: 1px solid #d2d2d2;
}
.large-thumbnail-parent:hover .large-thumbnail-full-screen
{
    display: block;
    -webkit-animation: opacIn-from-0 1s; /* Chrome, Safari, Opera */
    animation: opacIn-from-0 1s;
}
.large-thumbnail-full-screen {
    cursor: pointer;
    position: absolute;
    top: 10px;
    left: 10px;
    display: none;
    padding: 5px;
    background-color: #666666;
    border-radius: 5px;
    color: #e0e0e0;
}
.large-thumbnail-full-screen:hover {
    color: white;
}
.large-thumbnail-full-screen:active {
    margin-top: 1px;
    margin-right: -1px;
}

.msg-file-meta {
    font-size: 12px;
    line-height: 1.3rem;
    padding-left: 75px;
    min-height: 65px;
}
.large-thumbnail-grand-parent .msg-file-meta {
    padding-left: 0;
    min-height: 0;
}
.msg-file-meta-up {
    margin-bottom: 5px;
}
.msg-file-meta .msg-file-meta__title,
.msg-comment .msg-file-meta__title {
    color: #333;
    padding-bottom: 2px;
    font-weight: 700;
    font-size: 15px;
}
.msg-comment .msg-file-meta__title {
    display: block;
    margin-top: 6px;
}
.msg-file-meta__title:hover {
    color: #404040;
}
.msg-file-meta-info {
    color: #666;
}
.msg-file-meta-down a {
    color:#999999 !important;
}
.msg-file-meta-down .file-item-meta__shared {
    color: #999999;
    border-bottom: none;
    margin-right: 2px;
}
.msg-file-meta-down .file-item-meta__shared:hover {
    color: #666;
}
.msg-file-meta__writer {  }
.msg-comment { }
.msg-comment-with-thumbnail {
    min-height: 65px;
}
.msg-comment-header {
    color: #999999;
    font-size: 13px;
    margin: 5px 0 4px;
}

.msg-comment-header .file__name {
    font-size: 15px;
    line-height: 15px;
    color: #333;
    font-weight: 700;
}
.msg-comment-body {
    margin-top: 10px;
}
/*.msg-comment-body i {*/
/*font-size: 1.8rem;*/
/*line-height: 2rem;*/
/*color: #ebeded;*/
/*}*/
.msg-comment-body p {
    font-size: 13px;
    color: #333;
    line-height: 1.3rem;
}
/*.editable-wrap textarea {
    height: 41px;
    background: #fff;
    font-size: .95rem;
    line-height: 1.2rem;
    border: 2px solid #e0e0e0;
    margin: 0;
    color: #3d3c40;
    resize: none;
}*/

.footer {
    background: #fff;
    position: fixed;
    margin-left: 220px;
    left: 0;
    right: 0;
    bottom: 0;
    height: 60px;
}
.footer #primary_file_button {
    border: none;
    border-radius: 0;
    background: #ededed;
}
.footer #message-input {
    border: 2px solid #e0e0e0;
    border-radius: 0;
    line-height: 1.3rem;
    padding: 5px 5px 5px 8px;
}
.post-loading {
    background-color: #f2f2f2 !important;
}
.editable-wrap {
    width: 100%;
    position: relative;
}
.editable-wrap .editable-controls,
.editable-wrap .editable-error {
    display: block;
    margin-right: 90px;
}

.last {
    background-color: rgb(238, 252, 247);
    -webkit-animation: opacIn 0.8s; /* Chrome, Safari, Opera */
    animation: opacIn 0.8s;
    margin-left: -20px;
    margin-right: -10px;
    padding-left: 67px;
    margin-top: -13px !important;
    padding-top: 13px;
    /*margin-bottom: 8px;*/
    /*padding-bottom: 5px;*/
}
.comment-continue.last {
    padding-top: 0;
    margin-bottom: 0;
    margin-top: 0 !important;
    padding-bottom: 15px;
}
.last.file-upload {
    margin-left: -20px !important;
    padding-bottom: 0;
}
.last .msg-item-float {
    left: 20px;
    top: 13px;
}
/* Chrome, Safari, Opera */
@-webkit-keyframes opacIn {
    from {opacity: 0;}
    to {opacity: 1;}
}
/* Standard syntax */
@keyframes opacIn {
    from {opacity: 0;}
    to {opacity: 1;}
}

.post-message {
    height: 30px;
    width: 30px;
    position: absolute;
    z-index: 1  ;
    top: 7px;
    left: 70px;
}
.msgs__loading {
    background-size: 30px;
}

/*
css for system-event-msg
*/
.system-event-msg {
    min-height: 15px;
}
.system-event-msg .msg-item-float {
    height: inherit;
}
.system-event-msg .msg-item-float img {
    background-image: none !important;
    height: 1px;
    background-color: #ededed;
    vertical-align: middle;
}

.system-event-msg .msg-item-header {
    display: none;
}
.system-event-msg .msg-item-body {
    font-size: 15px;
    color: #999999;
}


.js-fileapi-wrapper {
    position: static !important;
}
.js-fileapi-wrapper > div {
    height: 0 !important;
}

#primary_file_button .icon-upload {
    line-height: 35px;
}

